로깅 간단히 알아보기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#springboot.coremvc1 ???? ? ?? ?? ?? ??
+#logging.level.springboot.coremvc1=trace ??? ?? trace?? ?? ? ??? ????? ???.
+#logging.level.springboot.coremvc1=debug ??? ?? debug?? ?? ???? ????.
+#logging.level.springboot.coremvc1=info ??? ?? info?? ?? ???? ????.
+#?? ?? ????? info?? ?? warn error ? ????? ??.
 
+#?? ?? ?? ??(?? info)
+#logging.level.root=info? ???? ?? ???? logging? ??? trace?? ???? ????? ??? ?????.
